log
Thu 21 Mar 2024 08:17:45 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
d92ee0f
Thu 21 Mar 2024 08:24:34 PM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:23: error: implicit declaration of function ‘length’ [-Werror=implicit-function-declaration]
   67 |   for (int i = 0; i < length(L); i++)
      |                       ^~~~~~
exercises.c:69:20: error: implicit declaration of function ‘get’; did you mean ‘getw’? [-Werror=implicit-function-declaration]
   69 |     suma += *(int*)get(L, i);
      |                    ^~~
      |                    getw
exercises.c:69:14: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   69 |     suma += *(int*)get(L, i);
      |              ^
exercises.c:72:10: error: ‘suma’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |   return suma;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
0a62d4f
Thu 21 Mar 2024 08:28:51 PM UTC: 
 exercises.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:15: error: comparison between pointer and integer [-Werror]
   69 |   while (elem != NULL)
      |               ^~
exercises.c:71:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   71 |     elem = (int*)first(L);
      |          ^
exercises.c:75:10: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   75 |     elem = next(L);
      |          ^
cc1: all warnings being treated as errors
Compilation failed
7a1b828
Thu 21 Mar 2024 08:29:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:73:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   73 |     suma += elem;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
feaa729
Thu 21 Mar 2024 08:29:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:73:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   73 |     suma = elem + suma;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
2ed888e
Thu 21 Mar 2024 08:33:54 PM UTC: 
 exercises.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
1bb1aab
Thu 21 Mar 2024 08:35:47 PM UTC: 
 exercises.c | 12 +-----------
 1 file changed, 1 insertion(+), 11 deletions(-)
 tests:  1|4
total_score: 10/70
a40382f
Thu 21 Mar 2024 08:38:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1874acd
Thu 21 Mar 2024 08:39:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
fa31cde
Thu 21 Mar 2024 08:40:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8e1a9a0
Thu 21 Mar 2024 08:42:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e0914d4
